--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,21 +8,17 @@ enable_language(CXX)
 
 find_package(kodi REQUIRED)
 find_package(kodiplatform REQUIRED)
-find_package(Crypto++ REQUIRED)
-find_package(CURL REQUIRED)
 find_package(JsonCpp REQUIRED)
 
 include_directories(${kodiplatform_INCLUDE_DIRS}
-                    ${CRYPTOPP_INCLUDE_DIRS}
-                    ${CURL_INCLUDE_DIRS}
                     ${JSONCPP_INCLUDE_DIRS}
                     ${KODI_INCLUDE_DIR})
 
-set(DEPLIBS ${kodiplatform_LIBRARIES} ${CRYPTOPP_LIBRARIES}
-            ${CURL_LIBRARIES} ${JSONCPP_LIBRARIES})
+set(DEPLIBS ${kodiplatform_LIBRARIES} ${JSONCPP_LIBRARIES})
 
 set(FILMON_SOURCES src/client.cpp
                    src/FilmonAPI.cpp
-                   src/PVRFilmonData.cpp)
+                   src/PVRFilmonData.cpp
+                   src/md5.cpp)
 
 build_addon(pvr.filmon FILMON DEPLIBS)
