--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: kodi-pvr-filmon
 Priority: extra
-Maintainer: Arne Morten Kvarving <arne.morten.kvarving@sintef.no>
+Maintainer: Nobody <nobody@kodi.tv>
 Build-Depends: debhelper (>= 9.0.0), cmake, libtinyxml-dev, kodi-pvr-dev,
                libkodiplatform-dev, kodi-addon-dev, libjsoncpp-dev
 Standards-Version: 3.9.4
