--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,15 @@ enable_language(CXX)
 
 find_package(kodi REQUIRED)
 find_package(kodiplatform REQUIRED)
+find_package(platform REQUIRED)
 find_package(JsonCpp REQUIRED)
 
 include_directories(${kodiplatform_INCLUDE_DIRS}
+                    ${platform_INCLUDE_DIRS}
                     ${JSONCPP_INCLUDE_DIRS}
                     ${KODI_INCLUDE_DIR})
 
-set(DEPLIBS ${kodiplatform_LIBRARIES} ${JSONCPP_LIBRARIES})
+set(DEPLIBS ${platform_LIBRARIES} ${JSONCPP_LIBRARIES})
 
 set(FILMON_SOURCES src/client.cpp
                    src/FilmonAPI.cpp
