--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: kodi-pvr-filmon
 Priority: extra
 Maintainer: Nobody <nobody@kodi.tv>
 Build-Depends: debhelper (>= 9.0.0), cmake, libtinyxml-dev, kodi-pvr-dev,
-               libkodiplatform-dev, kodi-addon-dev, libjsoncpp-dev
+               libkodiplatform-dev (>= 16.0.0), kodi-addon-dev, libjsoncpp-dev
 Standards-Version: 3.9.4
 Section: libs
 
