--- a/pvr.filmon/addon.xml.in
+++ b/pvr.filmon/addon.xml.in
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="pvr.filmon"
-  version="0.7.1"
+  version="0.7.2"
   name="PVR Filmon Client"
   provider-name="Stephen Denham">
   <requires>
     <c-pluff version="0.1"/>
     <import addon="xbmc.pvr" version="4.1.0"/>
+    <import addon="kodi.guilib" version="5.10.0"/>
   </requires>
   <extension
     point="xbmc.pvrclient"
