--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,45 @@
 # build artifacts
 build/
+pvr.*/addon.xml
+
+# Debian build files
 debian/changelog
 debian/files
-debian/kodi-pvr-filmon-dbg.debhelper.log
-debian/kodi-pvr-filmon-dbg.substvars
-debian/kodi-pvr-filmon-dbg/
-debian/kodi-pvr-filmon.debhelper.log
-debian/kodi-pvr-filmon.postinst.debhelper
-debian/kodi-pvr-filmon.postrm.debhelper
-debian/kodi-pvr-filmon.substvars
-debian/kodi-pvr-filmon/
+debian/*.log
+debian/*.substvars
+debian/.debhelper/
 debian/tmp/
+debian/kodi-pvr-*/
 obj-x86_64-linux-gnu/
-pvr.filmon/addon.xml
+
+# commonly used editors
+# vim
+*.swp
+
+# Eclipse
+*.project
+*.cproject
+.classpath
+*.sublime-*
+.settings/
+
+# KDevelop 4
+*.kdev4
+
+# gedit
+*~
+
+# CLion
+/.idea
 
 # clion
 .idea/
 
-# Eclipse/CDT
-.cproject
-.project
-.settings/
+# to prevent add after a "git format-patch VALUE" and "git add ." call
+/*.patch
+
+# Visual Studio Code
+.vscode
+
+# to prevent add if project code opened by Visual Studio over CMake file
+.vs/
