update/cleanup debian build code

--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,9 @@
 Source: kodi-pvr-filmon
 Priority: extra
 Maintainer: Nobody <nobody@kodi.tv>
-Build-Depends: debhelper (>= 9.0.0), cmake, libtinyxml-dev,
-               libp8-platform-dev, kodi-addon-dev, libjsoncpp-dev
-Standards-Version: 3.9.4
+Build-Depends: debhelper (>= 9.0.0), cmake, kodi-addon-dev,
+               libjsoncpp-dev
+Standards-Version: 4.1.2
 Section: libs
 
 Package: kodi-pvr-filmon
