change system to C++ style

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,11 @@ include_directories(${JSONCPP_INCLUDE_DIRS}
 
 set(DEPLIBS ${JSONCPP_LIBRARIES})
 
-set(FILMON_SOURCES src/client.cpp
-                   src/FilmonAPI.cpp
+set(FILMON_SOURCES src/FilmonAPI.cpp
                    src/PVRFilmonData.cpp
                    src/md5.cpp)
 
-set(FILMON_HEADERS src/client.h
-                   src/FilmonAPI.h
+set(FILMON_HEADERS src/FilmonAPI.h
                    src/md5.h
                    src/PVRFilmonData.h)
 
