--- a/pvr.filmon/addon.xml.in
+++ b/pvr.filmon/addon.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="pvr.filmon"
-  version="6.1.0"
+  version="6.1.1"
   name="PVR Filmon Client"
   provider-name="Stephen Denham">
   <requires>@ADDON_DEPENDS@</requires>
@@ -123,5 +123,9 @@
     <assets>
       <icon>icon.png</icon>
     </assets>
+    <news>
+v6.1.1
+- Language update from Weblate
+    </news>
   </extension>
 </addon>
