Change name to make add-on easier to find in UI

--- a/pvr.filmon/addon.xml.in
+++ b/pvr.filmon/addon.xml.in
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="pvr.filmon"
-  version="20.2.0"
-  name="PVR Filmon Client"
+  version="20.2.1"
+  name="Filmon Client"
   provider-name="Stephen Denham">
   <requires>@ADDON_DEPENDS@</requires>
   <extension
