Sync of addon metadata translations

--- a/pvr.filmon/addon.xml.in
+++ b/pvr.filmon/addon.xml.in
@@ -34,7 +34,7 @@
     <summary lang="es_MX">Cliente Filmon PVR</summary>
     <summary lang="et_EE">Filmon PVR&apos;i klient</summary>
     <summary lang="eu_ES">Filmon PVR Bezeroa</summary>
-    <summary lang="fi_FI">Kodin Filmon-asiakasohjelma</summary>
+    <summary lang="fi_FI">Filmon PVR-pääte</summary>
     <summary lang="fr_CA">Client de numériscope Filmon</summary>
     <summary lang="fr_FR">Client enregistreur vidéo (PVR) Filmon</summary>
     <summary lang="gl_ES">Cliente PVR Filmon</summary>
